Revision history for JSON-Schema-Modern

{{$NEXT}}

0.530     2021-12-03 16:44:23Z
          - fix hash slice syntax that is not available before perl 5.28

0.529     2021-12-03 04:00:26Z
          - added FREEZE and THAW callbacks to assist with serialization

0.528     2021-11-30 06:17:29Z
          - evaluation callback sub signature has changed, to add $data
          - minor performance improvement during evaluation

0.527     2021-11-26 00:53:42Z
          - fixes to base64 and json decoders used in the Content vocabulary

0.526     2021-11-23 05:11:46Z
          - fix evaluate() callbacks for keywords that have no
            runtime-specific actions
          - optional support for contentEncoding, contentMediaType and
            contentSchema with the validate_content_schemas option and
            "encoding", "media_type" handler registries
          - a boolean flag "unknown" has been added to Annotation objects to
            indicate they correspond to an unknown keyword in the schema

0.525     2021-11-17 05:35:24Z
          - minimum Perl version raised to 5.20
          - dropped bundling hyper-schema files, as they are not validatable
            without vocabulary support (see issue #44)
          - & overload added to JSON::Schema::Modern::Result, for combining
            results
          - add callbacks to evaluate(), to enable finding certain positions
            of interest in a document or schema

0.524     2021-11-10 04:36:49Z
          - some refactoring of vocabulary and document methods, to faciliate
            re-use
          - new utility functions: is_uri_reference, assert_keyword_exists
          - allow specifying the metaschema_uri for a schema document
          - add "validate" method to Document object
          - updated draft2019-09 and added draft2020-12 hyperschema schemas

0.523     2021-10-24 05:58:27Z
          - fix tests that were relying on an optional prereq