@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - add method to add format implementations after construction
 
 0.530     2021-12-03 16:44:23Z
           - fix hash slice syntax that is not available before perl 5.28
